--- a/sw-proxy-service/serverless.yml
+++ b/sw-proxy-service/serverless.yml
@@ -23,11 +23,11 @@ functions:
     handler: src/handlers/get-people-by-name/get-people-by-name.handler
     name: get-people-by-name
   GetPlanetByHomeworld:
-    name: get-planet-by-homeworld
-    handler: src/handlers/get-planet-by-homeworld/get-planet-by-homeworld.handler
+    name: get-data-by-url
+    handler: src/handlers/get-data-by-url/get-data-by-url.handler
   GetFilms:
-    name: get-films
-    handler: src/handlers/get-films/get-films.handler
+    name: get-data-by-urls
+    handler: src/handlers/get-data-by-urls/get-data-by-urls.handler
 
 custom:
   appSync:
@@ -52,6 +52,11 @@ custom:
         field: films
         request: "get-films/request-mapping-template.vtl"
         response: "get-films/response-mapping-template.vtl"
+      - dataSource: GetFilms
+        type: Person
+        field: species
+        request: "get-species/request-mapping-template.vtl"
+        response: "get-species/response-mapping-template.vtl"
     dataSources:
       - type: AWS_LAMBDA
         name: GetPeopleByName
